--- a/estilos.css
+++ b/estilos.css
@@ -74,6 +74,9 @@ a
 	
 
 }
+aside{
+	display: none;
+}
 
 body
 {
@@ -131,14 +134,29 @@ header h1
 	font-weight: normal;
 	margin: 0.2em 70px 0 0;
 }
-
-header #logo img
+header #logo
 {
 	border-right: 1px solid white;
-	padding-right: 0.5em;
 	margin-right: 0.5em;
-	width: 52px;
 }
+header #logo img
+{
+	padding-right: 0.5em;
+	width: 52px;
+	-webkit-transition: 0.5s;
+	-moz-transition: 0.5s;
+	
+}
+header #logo img:hover
+{
+	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+
+
+}
+
 
 header #avatar
 {
@@ -183,10 +201,32 @@ nav ul #publicar_nav a
 	background: #22bce0;
 	border-radius: 5px;
 	font-style: italic;
-	padding: 0.8em 0.5em;
+	padding: 0.8em 0.5em 0.8em 2.5em;
 	text-decoration: none;
 	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
 	box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;
+
+}
+nav ul #publicar_nav a:before
+{
+	position: absolute;
+	left: 0.3em;
+	top: 0.8em;
+}
+nav ul #publicar_nav a:hover:before
+{
+	font-size: 20px;
+	
+
+
+	
+}
+
+
+
+nav ul li a:hover
+{
+	background: blue;
 }
 nav ul li
 {
@@ -197,9 +237,10 @@ nav ul li a
 {
 	color: white;
 	display: block;
-	padding: 0.5em 0;
+	padding: 0.5em;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
 }
-
 
 
 
@@ -286,4 +327,68 @@ nav ul li a
 #contenido .item .votacion .guardar_item
 {
 	float: right;
+}
+
+
+
+
+
+@media screen and (min-width: 800px) {
+	body{
+		
+	}
+	#contenido{
+		overflow: hidden;
+	}
+	#contenido .item{
+		width: 49%;
+		float: left;
+		
+	}
+	#contenido .item:nth-child(odd){
+		margin-right: 2%;
+
+	}
+}
+
+
+@media screen and (min-width: 1000px) {
+	aside {
+		display: block;
+		float: right;
+		margin: 1em;
+		width: 25%;
+	}
+	aside video{
+		width: 100%;
+	}
+}
+
+
+
+/*
+
+FORMULARIO
+
+*/
+
+.formulario
+{
+	padding: 1em 1em 0 0 ;
+	text-align: right;
+	display: none;
+}
+.formulario input{
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	padding: 0.2em 0.6em;
+}
+.formulario input[type="submit"]
+{
+	background: #22bce0;
+	border-color: #22bce0;
+	font-style: italic;
+	color: white;
+	text-shadow: rgba(0,0,0,0.5) 2px 2px 5px;
+	box-shadow: rgba(0,0,0,0.5) 5px 5px 20px;	
 }
