--- a/estilos.css
+++ b/estilos.css
@@ -12,6 +12,7 @@
 }
 */
 
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 @font-face {
     font-family: 'icomoon';
@@ -215,11 +216,14 @@ nav ul #publicar_nav a:before
 }
 nav ul #publicar_nav a:hover:before
 {
-	font-size: 20px;
-	
-
-
-	
+	font-size: 20px;	
+}
+nav ul #publicar_nav a.disabled
+{
+	background: grey;
+	cursor: default;
+	box-shadow: none;
+	text-decoration: none;
 }
 
 
